--- a/Chulos and Clean/RegistrarCompra.html
+++ b/Chulos and Clean/RegistrarCompra.html
@@ -47,28 +47,12 @@
                 <div class="jumbotron">
                     <h1 class="display-4">Calzado para todos</h1>
                     <hr class="my-4">
-                    <h2><b>Calzado en venta</b></h2>
+                    <h2>Calzado en venta</h2>
+        </div>
+    </div>
 
-                    <div class="card" style="width: 18rem;">
-                      <img src="Calzado1.jpg" class="card-img-top">
-                      <div class="card-body">
-                        <h5 class="card-title">Air Jordan</h5>
-                        <p class="card-text">Precio: $1,200<br> Tiempo de uso: 2 años <br> Color: Blanco, Naranja, Negro <br> Talla: 28</p>
-                        <a href="RegistrarCompra.php" class="btn btn-primary">Añadir al coche autonomo de adquisición virtual</a>
-                      </div>
-                    </div>
 
-                    <div class="card" style="width: 18rem;">
-                      <img src="Calzado2.jpg" class="card-img-top">
-                      <div class="card-body">
-                        <h5 class="card-title">Adidas x Bad Bunny</h5>
-                        <p class="card-text">Precio: $4,500<br> Tiempo de uso: 3 meses <br> Color: Blanco <br> Talla: 27</p>
-                        <a href="RegistrarCompra.php" class="btn btn-primary">Añadir al coche autonomo de adquisición virtual</a>
-                      </div>
-                    </div>                    
-                  https://getbootstrap.com/docs/4.6/components/card/
-                </div>
-              </div>
+    
     <footer class="text-center">
         <hr>
         Osuna Quintero José Antonio, Quintero Molina José Manuel, Cota Ibarra Kelian Alejandro, Rodriguez Carrasco Karla Valeria, 6AVP
